--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,3 +25,7 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew desktop:dist
+      uses: actions/upload-artifact@v2
+      with:
+      name: Package
+      path: desktop/build/libs
