--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,10 @@
 android {
     buildToolsVersion "30.0.3"
     compileSdkVersion 30
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
