--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build debug APK
-      run: bash ./gradlew android:assembleDebug
+      run: ./gradlew android:assembleDebug
     - name: Upload APK
       uses: actions/upload-artifact@v1
       with:
