--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ gwt-unitCache/
 www-test/
 .gwt-tmp/
 
+## Game Saves
+/android/assets/saves/*
+
 ## Android Studio and Intellij and Android in general
 /android/libs/armeabi/
 /android/libs/armeabi-v7a/
