--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,15 +17,26 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: set up JDK 1.8
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build debug APK
-      run: ./gradlew android:assembleDebug
+    - name: Build unsigned release apk
+      run: ./gradlew android:assembleRelease
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
-        name: app
-        path: android/build/outputs/apk/debug/app-debug.apk
+        name: unsigned.apk
+        path: android/build/outputs/apk/release/android-release-unsigned.apk
+    - name: Sign Android release
+      uses: r0adkll/sign-android-release@v1
+      # ID used to access action output
+      id: sign_app
+      with:
+        releaseDirectory: android/build/outputs/apk/release/
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+
