--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,14 +29,14 @@ jobs:
       with:
         name: unsigned.apk
         path: android/build/outputs/apk/release/android-release-unsigned.apk
-    - name: Sign Android release
-      uses: r0adkll/sign-android-release@v1
-      # ID used to access action output
-      id: sign_app
-      with:
-        releaseDirectory: android/build/outputs/apk/release/
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        alias: ${{ secrets.ALIAS }}
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
+    #- name: Sign Android release
+    #  uses: r0adkll/sign-android-release@v1
+    #  # ID used to access action output
+    #  id: sign_app
+    #  with:
+    #    releaseDirectory: android/build/outputs/apk/release/
+    #    signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+    #    alias: ${{ secrets.ALIAS }}
+    #    keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+    #    keyPassword: ${{ secrets.KEY_PASSWORD }}
 
